implement json schema validation

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"dependencies": {
 		"request": "^2.88.0",
 		"request-promise-native": "^1.0.5",
-		"mysql2": "^1.6.4"
+		"mysql2": "^1.6.4",
+		"jsonschema": "^1.2.4"
 	}
 }
